Fix Dark Mode Gradient (#27)

--- a/_resources/scss/article.scss
+++ b/_resources/scss/article.scss
@@ -52,7 +52,7 @@ article {
 		@extend %dehyphenated;
 	}
 
-	.summary, .summary:visited {
+	.summary, .summary:visited, .summary:hover {
 		@extend %hyphenated;
 		@extend %color-copy;
 		display: block;
@@ -64,15 +64,8 @@ article {
 		top: 0;
 		left: 0;
 
-		&:before {
-			content: '';
-			position: absolute;
-			top: 0;
-			left: 0;
-			right: 0;
-			bottom: 0;
-			background-image: linear-gradient(to bottom, transparent 0%,rgba(v(cb-rgb), 1) 85%);
-		}
+		-webkit-mask-image: linear-gradient(#000, transparent 85%);
+		mask-image: linear-gradient(#000, transparent 85%);
 	}
 
 	img {
